-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.2.0-beta
-
486eae674bdab0c4f9cb47d81e2931b41bd537b4
"Go to the device configuration and list exactly one port in "free ports". Set two directories to mount. The run and debug actions must be disabled and a warning label must appear."
Setting the ports, and clicking okay does not update the run state. IE, setting back to more than 2 ports does not re-enable the ability to run the project, nor remove the warning in the project properties dialog.
Similar, setting it to 1, then okay, doesn't display the warning, nor does it disable run.