Maemo: Fix issue with cached device configuration.

External functions need to access the real device config,
internal ones need the cached one during deployment.

Task-number: QTCREATORBUG-4514