src/plugins/qt4projectmanager/qt-maemo/abstractmaemodeploystep.h
@@ -97,7 +97,9 @@ protected:
 
     QString deployMountPoint() const;
     const Qt4BuildConfiguration *qt4BuildConfiguration() const;
+    MaemoPortList freePorts(const QSharedPointer<const MaemoDeviceConfig> &devConfig) const;
     QSharedPointer<Utils::SshConnection> connection() const { return m_connection; }
+    QSharedPointer<const MaemoDeviceConfig> cachedDeviceConfig() const { return m_cachedDeviceConfig; }
 
 private slots:
     void start();
